--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
-    "@rollup/rollup-win32-x64-msvc": "^4.55.2",
     "@testing-library/cypress": "^10.1.0",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
@@ -41,5 +40,8 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "vite": "^6.0.5"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-win32-x64-msvc": "^4.55.2"
   }
 }
