--- a/.github/workflows/main_safe-8-asessment.yml
+++ b/.github/workflows/main_safe-8-asessment.yml
@@ -26,13 +26,20 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install
-          npm run build --if-present
+          npm run build
           npm run test --if-present
 
       - name: Install server dependencies
         run: |
           cd server
           npm install --production
+
+      - name: Verify build artifacts
+        run: |
+          echo "Checking dist folder..."
+          ls -la dist/
+          echo "Checking server folder..."
+          ls -la server/
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
