--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
     "test:e2e": "cypress run --browser chrome",
-    "test:e2e:headed": "cypress run --browser chrome --headed"
+    "test:e2e:headed": "cypress run --browser chrome --headed",
+    "test:e2e:firefox": "cypress run --browser firefox",
+    "test:e2e:edge": "cypress run --browser edge",
+    "test:e2e:ci": "start-server-and-test 'npm run dev' http://localhost:5174 'npm run cypress:run'"
   },
   "dependencies": {
     "axios": "^1.13.2",
@@ -29,16 +32,19 @@
     "react-router-dom": "^7.12.0"
   },
   "devDependencies": {
+    "@axe-core/cli": "^4.11.1",
     "@eslint/js": "^9.39.1",
     "@testing-library/cypress": "^10.1.0",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
     "cypress": "^15.9.0",
+    "cypress-axe": "^1.7.0",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "start-server-and-test": "^2.1.3",
     "vite": "^6.0.5"
   },
   "optionalDependencies": {
